tests/snapshots/annotations_latex.snap
---
source: tests/snapshots.rs
---
\documentclass[tikz,border=6pt]{standalone}
\usepackage{tikz}
\usetikzlibrary{decorations.pathreplacing,shapes.geometric}
\definecolor{qrabF3F3F3}{HTML}{F3F3F3}
\begin{document}
\begin{tikzpicture}[line cap=round,line join=round,font=\sffamily,scale=1.000]
% circuit: annotations
  \draw (0.000,-0.000) -- (14.762,-0.000);
  \node[anchor=east] at (0,-0.000) {\texttt{|0>}};
  \node[anchor=west] at (14.762,-0.000) {\texttt{out}};
  \draw (0.000,-1.000) -- (14.762,-1.000);
  \node[anchor=east] at (0,-1.000) {\texttt{|0>}};
  \node[anchor=west] at (14.762,-1.000) {\texttt{out}};
  \draw (0.000,-2.000) -- (14.762,-2.000);
  \node[anchor=east] at (0,-2.000) {\texttt{|0>}};
  \node[anchor=west] at (14.762,-2.000) {\texttt{out}};
  \node[inner sep=2pt,fill=yellow] at (1.500,-0.000) {\texttt{data}};
  \node[inner sep=2pt,fill=yellow] at (1.500,-1.000) {\texttt{work}};
  \node[inner sep=2pt,fill=yellow] at (1.500,-2.000) {\texttt{flag}};
  \draw[decorate,decoration={brace,amplitude=4pt},color=blue] (2.391,-2.340) -- (2.391,0.340);
  \node[inner sep=2pt,text=blue,fill=white] at (3.076,-1.000) {\texttt{input}};
  \node[draw=black,fill=white,minimum width=22.000pt,minimum height=22.000pt] at (4.652,-0.000) {\texttt{H}};
  \node[anchor=south,text width=72.000pt,align=center] at (4.652,-0.580) {\texttt{decode}};
  \draw[decorate,decoration={brace,amplitude=4pt},color=teal] (5.543,-2.340) -- (5.543,0.340);
  \draw[decorate,decoration={brace,amplitude=4pt,mirror},color=teal] (7.131,-2.340) -- (7.131,0.340);
  \node[inner sep=2pt,text=teal,fill=qrabF3F3F3] at (6.337,-1.000) {\texttt{encode}};
  \draw[decorate,decoration={brace,amplitude=4pt,mirror},color=purple] (9.001,-2.340) -- (9.001,0.340);
  \node[inner sep=2pt,text=purple,fill=white] at (8.207,-1.000) {\texttt{result}};
  \draw[color=red,dashed] (9.892,0.420) -- (9.892,-2.420);
  \node[anchor=south] at (9.892,0.420) {\texttt{stage}};
  \draw (11.392,-0.000) -- (11.392,-2.000);
  \draw[draw=black,fill=black] (11.392,-0.000) circle[radius=2.2pt];
  \draw[draw=black,fill=white] (11.392,-2.000) circle[radius=4.0pt];
  \draw (11.252,-2.000) -- (11.532,-2.000) (11.392,-2.140) -- (11.392,-1.860);
  \draw[decorate,decoration={brace,amplitude=4pt},color=blue] (12.283,-2.340) -- (12.283,0.340);
  \draw[decorate,decoration={brace,amplitude=4pt,mirror},color=blue] (13.871,-2.340) -- (13.871,0.340);
  \node[inner sep=2pt,text=blue,fill=white] at (13.077,-1.000) {\texttt{repeat}};
\end{tikzpicture}
\end{document}
