tests/snapshots/annotations_svg.snap
---
source: tests/snapshots.rs
---
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="441.275" height="102.798" viewBox="-28.600 -27.949 441.275 102.798" font-family="ui-monospace, SFMono-Regular, Menlo, Consolas, monospace" font-size="10">
  <title>annotations</title>
  <rect x="-28.600" y="-27.949" width="441.275" height="102.798" fill="#FFFFFF"/>
  <g>
    <line x1="0.000" y1="0.000" x2="384.075" y2="0.000" fill="none" stroke="#000000" stroke-width="1"/>
    <text x="-13.300" y="3.500" text-anchor="middle" fill="#000000">|0&gt;</text>
    <text x="397.375" y="3.500" text-anchor="middle" fill="#000000">out</text>
    <line x1="0.000" y1="28.450" x2="384.075" y2="28.450" fill="none" stroke="#000000" stroke-width="1"/>
    <text x="-13.300" y="31.950" text-anchor="middle" fill="#000000">|0&gt;</text>
    <text x="397.375" y="31.950" text-anchor="middle" fill="#000000">out</text>
    <line x1="0.000" y1="56.900" x2="384.075" y2="56.900" fill="none" stroke="#000000" stroke-width="1"/>
    <text x="-13.300" y="60.400" text-anchor="middle" fill="#000000">|0&gt;</text>
    <text x="397.375" y="60.400" text-anchor="middle" fill="#000000">out</text>
    <rect x="28.275" y="-3.700" width="28.800" height="11.000" fill="#FFFF00"/>
    <text x="42.675" y="3.500" text-anchor="middle" fill="#000000">data</text>
    <rect x="28.275" y="24.750" width="28.800" height="11.000" fill="#FFFF00"/>
    <text x="42.675" y="31.950" text-anchor="middle" fill="#000000">work</text>
    <rect x="28.275" y="53.200" width="28.800" height="11.000" fill="#FFFF00"/>
    <text x="42.675" y="60.400" text-anchor="middle" fill="#000000">flag</text>
    <path d="M 79.091 -9.673 Q 77.091 -9.673 77.091 9.388 T 75.091 28.450 Q 77.091 28.450 77.091 47.511 T 79.091 66.573" fill="none" stroke="#0000FF" stroke-width="1"/>
    <rect x="67.850" y="24.750" width="35.000" height="11.000" fill="#FFFFFF"/>
    <text x="85.350" y="31.950" text-anchor="middle" fill="#0000FF">input</text>
    <rect x="117.025" y="-11.000" width="22.000" height="22.000" fill="#FFFFFF" stroke="#000000" stroke-width="1"/>
    <text x="128.025" y="3.500" text-anchor="middle" fill="#000000">H</text>
    <text x="128.025" y="14.501" text-anchor="middle" fill="#000000">decode</text>
    <path d="M 164.441 -9.673 Q 162.441 -9.673 162.441 9.388 T 160.441 28.450 Q 162.441 28.450 162.441 47.511 T 164.441 66.573" fill="none" stroke="#008080" stroke-width="1"/>
    <path d="M 176.959 -9.673 Q 178.959 -9.673 178.959 9.388 T 180.959 28.450 Q 178.959 28.450 178.959 47.511 T 176.959 66.573" fill="none" stroke="#008080" stroke-width="1"/>
    <rect x="150.100" y="24.750" width="41.200" height="11.000" fill="#F3F3F3"/>
    <text x="170.700" y="31.950" text-anchor="middle" fill="#008080">encode</text>
    <path d="M 219.634 -9.673 Q 221.634 -9.673 221.634 9.388 T 223.634 28.450 Q 221.634 28.450 221.634 47.511 T 219.634 66.573" fill="none" stroke="#BF0040" stroke-width="1"/>
    <rect x="192.775" y="24.750" width="41.200" height="11.000" fill="#FFFFFF"/>
    <text x="213.375" y="31.950" text-anchor="middle" fill="#BF0040">result</text>
    <line x1="256.050" y1="-11.949" x2="256.050" y2="68.849" fill="none" stroke="#FF0000" stroke-width="1" stroke-dasharray="3 2"/>
    <text x="256.050" y="-13.949" text-anchor="middle" fill="#000000">stage</text>
    <line x1="298.725" y1="0.000" x2="298.725" y2="56.900" fill="none" stroke="#000000" stroke-width="1"/>
    <circle cx="298.725" cy="0.000" r="2.200" fill="#000000" stroke="#000000" stroke-width="1"/>
    <circle cx="298.725" cy="56.900" r="4.000" fill="#FFFFFF" stroke="#000000" stroke-width="1"/>
    <line x1="294.742" y1="56.900" x2="302.708" y2="56.900" fill="none" stroke="#000000" stroke-width="1"/>
    <line x1="298.725" y1="60.883" x2="298.725" y2="52.917" fill="none" stroke="#000000" stroke-width="1"/>
    <path d="M 335.141 -9.673 Q 333.141 -9.673 333.141 9.388 T 331.141 28.450 Q 333.141 28.450 333.141 47.511 T 335.141 66.573" fill="none" stroke="#0000FF" stroke-width="1"/>
    <path d="M 347.659 -9.673 Q 349.659 -9.673 349.659 9.388 T 351.659 28.450 Q 349.659 28.450 349.659 47.511 T 347.659 66.573" fill="none" stroke="#0000FF" stroke-width="1"/>
    <rect x="320.800" y="24.750" width="41.200" height="11.000" fill="#FFFFFF"/>
    <text x="341.400" y="31.950" text-anchor="middle" fill="#0000FF">repeat</text>
  </g>
</svg>
