tests/snapshots/lifecycle_typst.snap
---
source: tests/snapshots.rs
---
#set page(width: auto, height: auto, margin: 6pt, fill: white)
#import "@preview/quill:0.8.0" as quill

#quill.quantum-circuit(
  wires: 3,
  row-spacing: 12.000pt,
  column-spacing: 12.000pt,
  scale: 100.000%,
  gate-padding: 4.000pt,
  fill: white,
  quill.setwire(1, stroke: black),
  6,
  quill.setwire(2, stroke: black),
  1,
  quill.setwire(1, stroke: black),
  2,
  quill.setwire(0, stroke: black),
  1,
  [\ ],
  quill.setwire(1, stroke: black),
  2,
  quill.setwire(0, stroke: black),
  2,
  quill.setwire(1, stroke: black),
  3,
  quill.setwire(2, stroke: black),
  3,
  [\ ],
  quill.setwire(0, stroke: black),
  4,
  quill.setwire(1, stroke: black),
  3,
  quill.setwire(1, stroke: black),
  3,
  quill.lstick(text("|0>"), x: 0, y: 0),
  quill.rstick(text("out"), x: 9, y: 1),
  quill.lstick(text("|0>"), x: 0, y: 1),
  quill.rstick(text("out"), x: 9, y: 2),
  quill.midstick(line(start: (0pt, -3.7pt), end: (0pt, 3.7pt), stroke: black), x: 3, y: 2, label: (content: text("|aux>"), pos: left)),
  quill.gate(text("H"), x: 1, y: 0),
  quill.gate(box(width: 18.000pt, height: 12.000pt, inset: 0pt, fill: rgb("#F3F3F3"), [#place(line(start: (0.000pt, 0pt), end: (0.000pt, 12.000pt), stroke: black)) #align(center + horizon, text(fill: black, "0"))]), x: 1, y: 1, box: false, width: 18.000pt),
  quill.phantom(x: 2, y: 1, width: 24.000pt, height: 0.000pt),
  quill.gate(box(width: 18.000pt, height: 12.000pt, inset: 0pt, fill: white, [#place(line(start: (18.000pt, 0pt), end: (18.000pt, 12.000pt), stroke: black)) #align(center + horizon, text(fill: black, "1"))]), x: 3, y: 1, box: false, width: 18.000pt),
  quill.nwire(text("3"), x: 2, y: 0),
  quill.midstick(text("mix"), n: 3, x: 4, y: 0, fill: yellow),
  quill.permute(1, 2, 0, x: 6, y: 0, width: 30.000pt, stroke: purple, bend: 50.000%, wire-count: (2, 1, 1)),
  quill.phantom(x: 7, y: 2, width: 18.000pt, height: 8.000pt),
  quill.slice(n: 2, x: 7, y: 0, stroke: (paint: red, dash: "dashed")),
  quill.midstick(line(start: (0pt, -3.7pt), end: (0pt, 3.7pt), stroke: black), x: 8, y: 0, label: (content: text("done"), pos: right)),
)
